--- a/lib/l10n/intl_ar.json
+++ b/lib/l10n/intl_ar.json
@@ -2,45 +2,41 @@
   "settings": "الإعدادات",
   "contactUs": "اتصل بنا",
   "aboutUs": "معلومات عنا",
-  "aboutUsDescription": "هذا هو تطبيق المصنع ، الذي تم إنشاؤه للمساعدة في إدارة عمليات المصنع بكفاءة وفعالية.",
+  "aboutUsDescription": "هذا هو تطبيق المصنع، تم بناؤه للمساعدة في إدارة عمليات المصنع بكفاءة وفعالية.",
   "termsAndConditions": "الشروط والأحكام",
-  "termsAndConditionsContent": "هذه صفحة الشروط والأحكام. قدم الشروط والأحكام الخاصة بك هنا.",
-  "faq": "الأسئلة الشائعة",
-  "faqContent": "هذه هي صفحة الأسئلة الشائعة. قدم الأسئلة والأجوبة المتداولة هنا.",
+  "termsAndConditionsContent": "هذه صفحة الشروط والأحكام. قدم شروطك وأحكامك هنا.",
+  "faq": "الأسئلة المتكررة",
+  "faqContent": "هذه صفحة الأسئلة المتكررة. قدم الأسئلة الشائعة وإجاباتها هنا.",
   "darkMode": "الوضع الداكن",
   "language": "اللغة",
-  "signOut": "تسجيل خروج",
+  "signOut": "تسجيل الخروج",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "login": "تسجيل الدخول",
-  "forgotPassword": "هل نسيت كلمة المرور؟",
+  "forgotPassword": "نسيت كلمة المرور؟",
   "register": "ليس لديك حساب؟ سجل",
-  "continueAsGuest": "استمر كضيف",
+  "continueAsGuest": "تابع كضيف",
   "firstName": "الاسم الأول",
   "lastName": "اسم العائلة",
   "confirmPassword": "تأكيد كلمة المرور",
-  "placeOrder": "قم بالطلب",
+  "placeOrder": "تقديم طلب",
   "product": "المنتج",
-  "quantity": "الكمية",
   "orderPlaced": "تم تقديم الطلب بنجاح",
-  "order": "طلب",
   "orders": "الطلبات",
-  "profile": "الملف الشخصي",
-  "home": "الصفحة الرئيسية",
+  "home": "الرئيسية",
   "status": "الحالة",
   "pendingVerification": "في انتظار التحقق",
   "rejected": "تم رفض طلب التسجيل الخاص بك.",
   "accepted": "تم قبول طلب التسجيل الخاص بك. يمكنك الآن تسجيل الدخول.",
-  "pendingApproval": "طلب التسجيل الخاص بك معلق. يرجى الانتظار للحصول على الموافقة.",
-  "backToLogin": "العودة إلى تسجيل الدخول",
-  "orderHistory": "تاريخ الطلبات",
+  "pendingApproval": "طلب التسجيل الخاص بك قيد الانتظار. يرجى انتظار الموافقة.",
+  "backToLogin": "العودة لتسجيل الدخول",
   "noOrdersFound": "لم يتم العثور على طلبات",
   "name": "الاسم",
   "contactUsMessage": "تم إرسال الرسالة",
   "submit": "إرسال",
-  "pleaseEnterEmail": "يرجى إدخال البريد الإلكتروني",
+  "pleaseEnterEmail": "يرجى إدخال بريدك الإلكتروني",
   "pleaseEnterPassword": "يرجى إدخال كلمة المرور",
-  "pleaseEnterFirstName": "يرجى إدخال الاسم الأول",
+  "pleaseEnterFirstName": "يرجى إدخال اسمك الأول",
   "pleaseEnterLastName": "يرجى إدخال اسم العائلة",
   "passwordMismatch": "كلمات المرور غير متطابقة",
   "invalidEmail": "يرجى إدخال عنوان بريد إلكتروني صالح",
@@ -48,6 +44,10 @@
   "emailVerification": "يرجى التحقق من بريدك الإلكتروني أولاً.",
   "registrationNotAccepted": "لم يتم قبول تسجيلك بعد.",
   "emailSent": "تم إرسال بريد إعادة تعيين كلمة المرور",
+  "order": "طلب",
+  "quantity": "الكمية",
+  "profile": "الملف الشخصي",
+  "orderHistory": "تاريخ الطلبات",
   "noProfileData": "لم يتم العثور على بيانات الملف الشخصي",
   "mission": "مهمتنا",
   "missionContent": "مهمتنا هي...",
@@ -58,6 +58,34 @@
   "ourTeam": "فريقنا",
   "teamContent": "تعرف على فريقنا المخلص...",
   "contactInfo": "معلومات الاتصال",
-  "phone": "الهاتف: +123 456 7890",
-  "gallery": "معرض الصور"
+  "phone": "هاتف: +123 456 7890",
+  "gallery": "معرض الصور",
+  "customerHome": "الصفحة الرئيسية للعميل",
+  "virtualTour": "الجولة الافتراضية",
+  "downloadProfile": "تحميل الملف الشخصي",
+  "services": "الخدمات",
+  "products": "المنتجات",
+  "requestQuotation": "طلب عرض أسعار",
+  "certificates": "الشهادات",
+  "welcomeBack": "مرحبًا بعودتك",
+  "loginToContinue": "تسجيل الدخول للمتابعة",
+  "registerToContinue": "سجل للمتابعة",
+  "createNewAccount": "إنشاء حساب جديد",
+  "alreadyHaveAnAccountLogin": "لديك حساب بالفعل؟ تسجيل الدخول",
+  "rfqHistory": "سجل طلبات الأسعار",
+  "noRfqsFound": "لم يتم العثور على طلبات عروض الأسعار",
+  "changePassword": "تغيير كلمة المرور",
+  "profileUpdated": "تم تحديث الملف الشخصي بنجاح!",
+  "detailedDescription": "وصف تفصيلي عن",
+  "aboutText": "نص حول",
+  "service1": "الخدمة 1",
+  "service2": "الخدمة 2",
+  "service3": "الخدمة 3",
+  "certificate1": "الشهادة 1",
+  "certificate2": "الشهادة 2",
+  "registerSuccess": "تم التسجيل بنجاح. يرجى التحقق من بريدك الإلكتروني.",
+  "welcome": "أهلاً وسهلاً",
+  "skip": "تخطى",
+  "introductionText": "مرحبًا بكم في تطبيق المصنع!",
+  "getStarted": "ابدأ"
 }
