--- a/lib/l10n/intl_en.json
+++ b/lib/l10n/intl_en.json
@@ -59,5 +59,33 @@
   "teamContent": "Meet our dedicated team...",
   "contactInfo": "Contact Information",
   "phone": "Phone: +123 456 7890",
-  "gallery": "Gallery"
+  "gallery": "Gallery",
+  "customerHome": "Customer Home",
+  "virtualTour": "Virtual Tour",
+  "downloadProfile": "Download Profile",
+  "services": "Services",
+  "products": "Products",
+  "requestQuotation": "Request for Quotation",
+  "certificates": "Certificates",
+  "welcomeBack": "Welcome Back",
+  "loginToContinue": "Login to continue",
+  "registerToContinue": "Register to continue",
+  "createNewAccount": "Create New Account",
+  "alreadyHaveAnAccountLogin": "Already have an account? Login",
+  "rfqHistory": "RFQ History",
+  "noRfqsFound": "No RFQs found",
+  "changePassword": "Change Password",
+  "profileUpdated": "Profile updated successfully!",
+  "detailedDescription": "Detailed description about",
+  "aboutText": "About text for",
+  "service1": "Service 1",
+  "service2": "Service 2",
+  "service3": "Service 3",
+  "certificate1": "Certificate 1",
+  "certificate2": "Certificate 2",
+  "registerSuccess": "Registration successful. Please verify your email.",
+  "welcome": "Welcome",
+  "skip": "Skip",
+  "introductionText": "Welcome to the Factory App!",
+  "getStarted": "Get Started"
 }
